--- a/src/botanist/header.html
+++ b/src/botanist/header.html
@@ -1,7 +1,29 @@
-<header>
+<header class="bst-header">
   <div class="container-fluid">
-    <div class="row">
-
+    <div class="row align-items-center">
+      <div class="col-auto">
+        <a href="mailto:info@botanistbar.com"><b>Contact</b></a>
+      </div>
+      <div class="col-auto ml-auto">
+        <ul class="list-inline list-unstyled text-white m-0 bst-social">
+          <li class="list-inline-item align-middle">
+            <a
+              class="d-flex align-items-center justify-content-center"
+              href="#"
+            >
+              <i class="fab fa-facebook-f"></i>
+            </a>
+          </li>
+          <li class="list-inline-item align-middle">
+            <a
+              class="d-flex align-items-center justify-content-center insta-anchor"
+              href="#"
+            >
+              <i class="fab fa-instagram"></i>
+            </a>
+          </li>
+        </ul>
+      </div>
     </div>
   </div>
 </header>
